// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing modal should render cofirm password modal with expected contents and pass them the expected props 1`] = `
Array [
  <div
    className="[object Object] css-0"
  />,
  <div
    className="css-5grkxp"
  >
    <div
      className="css-qlehve"
      data-test-id="closeBtn"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <div
        className={
          Object {
            "margin": "5 -2 5 -2",
            "padding": "0 2",
          }
        }
      >
        <p />
      </div>
      <div
        className={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "3rem",
            "margin": "-4",
            "marginTop": "2",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`testing modal should render modal 1`] = `
Array [
  <div
    className="[object Object] css-0"
  />,
  <div
    className="css-5grkxp"
  >
    <div
      className="css-qlehve"
      data-test-id="closeBtn"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <p
      className="css-18poma1"
      data-test-id="emptyMsg"
    >
      Modal is empty, not configured!
    </p>
  </div>,
]
`;
